recursion.lessons.recursion.tree.Tree.scala.error
Tree:44: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:58: error: expected start of definition
	override def run() {
                 ^Tree:62: error: Unmatched closing brace '}' ignored here
}
^